# brianbuccola.github.io

./: 404.html  404.md  CNAME  README.markdown  README.md  _config.yml  about.html  about.md  after-body.html  atom.xml  bashdown  bb.sh  before-body.html  bio.md  blog.md  contact.md  cv.md  head.html  index.html  index.md  news.md  pdbb  research.md  rss.xml  site.cabal  site.hs  stack.yaml  style.css  tags.md  teaching.md  work.md
.circleci/: config.yml
_includes/: disqus.html  footer.html  head.html  header.html  icon-feed.html  icon-github.html  icon-twitter.html  mathjax.html
_layouts/: post.html
_posts/: 2012-11-27-multiple-ssh-keys-and-git.md  2012-11-27-testing-first-post.md  2012-11-28-latex-math-in-octopress.md  2012-11-29-how-to-change-the-favicon-in-octopress.md  2012-11-30-the-semantics-of-unless.md  2012-12-01-references-and-footnotes-in-html-css.md  2012-12-01-references-and-footnotes-in-htmlcss.md  2012-12-09-mapping-letters-to-the-natural-numbers.md  2013-01-04-scheduling-emails-with-at-and-mutt.md  2013-02-09-leaving-vim-latex-for-rubber-and-ultisnips.md  2013-02-18-a-note-on-miss.md  2013-02-23-maintaining-an-academic-website-part-1-editing-the-site.md  2013-03-02-maintaining-an-academic-website-part-2-pushing-to-server.md  2013-04-13-maintaining-an-academic-website-part-3-version-control.md  2013-04-22-implementing-lists-in-the-simply-typed-lambda-calculus.md  2013-10-21-dealing-with-acronyms-in-latex.md  2013-11-14-vim-and-unicode-keybindings-math-ipa-and-more.md  2014-01-11-a-simple-dropbox-command-line-alias.md  2017-03-07-just-a-test.md  (+23 more)
(+235 files in other folders)
